squashing bugs

--- a/tradeworld/Public/css/app.css
+++ b/tradeworld/Public/css/app.css
@@ -2344,10 +2344,6 @@ grid label:nth-child(n+49) {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 .mt-3 {
   margin-top: 0.75rem;
 }
